- install lilo when needed (#39878)
- render some message titles as blue

Version 11.21 - 21 August 2008

- ensure we don't default on the first keyboard layout when upgrading french
  box in english lang (#41103)
- do not set $HOME while installing packages (#18088)
- install proper qtX package for gcin
- partitionning step
  o ensure we initialize only once but at least one, thus fixing crash
    when embedded or in installer (#43011)

Version 11.20 - 20 August 2008

- do not uselessly install kernel-server on x86_64 if more than 3.8Gb
  are availlable
- diskdrake
  o fix sizing partitions bar (#24410)

Version 11.19 - 20 August 2008

- usbkbd is dead, using usbhid instead
- allow passing suppl=0 to disable "additional installation media" question
- drakx-in-chroot:
  o fix using remote repositories
- set title for advanced dialogs
- small GUI improvements

Version 11.18 - 19 August 2008

- center sub dialogs
- prevent flickering of big windows by:
  o ignoring bogus size-allocate events
  o properly computing window position
- stop reducing help & release notes dialogs' size

Version 11.17 - 19 August 2008

- drakx-in-chroot:
  o enable to choose resolution of Xvfb
  o enable to use a package repository different from installer one
- use new style popup button for 'help' & 'release notes' buttons

Version 11.15 - 19 August 2008

- fix crash with advanced widgets
- fix crashing on some buttons
- fix bogus popup of 'desktop choice' dialog
- authentication: enable network-auth meta-service if auth is not local

Version 11.13 - 18 August 2008

- move hardware packages detection code from installer to drakxtools

Version 11.12 - 18 August 2008

- align titles to the left
- display a separator below titles
- justify big texts
- popup advanced settings in dialogs
- refresh:
  o language step
  o license step

Version 11.11 - 18 August 2008

- 2009.0 beta 2 logo
- l10n:
  o fix selecting locales-XX for locales that specify scripting (#42663)
  o update list of locales