@@ -925,8 +925,9 @@ sub acceptLicense {
 		   },
 
 		   [
-                       { label => N("Do you accept this license ?"), title => 1 },
-                       { list => [ N_("Accept"), N_("Refuse") ], val => \$r, type => 'list', format => sub { translate($_[0]) } },
+                       { label => N("Do you accept this license ?"), title => 1, alignment => 'right' },
+                       { list => [ N_("Accept"), N_("Refuse") ], val => \$r, type => 'list', alignment => 'right',
+                         format => sub { translate($_[0]) } },
                        if_($o->{release_notes},
                            { clicked => sub { display_release_notes($o) }, do_not_expand => 1,
                              val => \ (my $_t1 = N("Release Notes")), install_button => 1, no_indent => 1 }
