@@ -1,3 +1,4 @@
+- improved license step
 - install lilo when needed (#39878)
 - render some message titles as blue
 
